# migraci-n-de-datos-csv-con-rust

./: .env  Cargo.toml  README.md  datos.csv
migrations/2021-01-18-055215_create_personas/: down.sql  up.sql
src/: main.rs  schema.rs
src/operaciones/: csv.rs
src/personas/: model.rs  routes.rs
