[package]
name = "emply"
version = "0.1.0"
authors = ["ricardo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }

actix-multipart = "0.2"
futures = "0.3.1"
sanitize-filename = "0.2"
csv = "1.1"
regex="1.4.3"